Manager routing fixed using local storage

--- a/Angular Project/src/app/an-story/an-story.component.html
+++ b/Angular Project/src/app/an-story/an-story.component.html
@@ -61,7 +61,7 @@
           </tr>
         </tbody>
       </table>
-      <button class="btn btn-primary font-weight-bold text-white float-right w-25" [routerLink]="['/home', anchor.userID]">Return to Dashboard</button>
+      <button (click)="returnToDash()" class="btn btn-primary font-weight-bold text-white float-right w-25">Return to Dashboard</button>
     </div>
   </div>
 </div>
