--- a/Angular Project/src/app/expert/expert.component.html
+++ b/Angular Project/src/app/expert/expert.component.html
@@ -64,6 +64,6 @@
       </mat-table>
     </div>
   </div>
-  <button class="btn btn-primary font-weight-bold text-white float-right w-25" [routerLink]="['/home', thisStory.anchorID]">Return
+  <button class="btn btn-primary font-weight-bold text-white float-right w-25" (click)="returnToDash()">Return
     to Dashboard</button>
 </div>
