--- a/Angular Project/src/app/login/login.component.html
+++ b/Angular Project/src/app/login/login.component.html
@@ -48,3 +48,24 @@
     </div>
   </div>
 
+
+  <span class="border border-primary">
+    <div id="login-forms" class="d-flex justify-content-center">
+      <form [formGroup]="form" (ngSubmit)="login()">
+        <div class="form-group">
+          <label for="email" style="font-family:Nunito" class="form-field-labels">Email</label>
+          <input type="text" formControlName="email" class="form-control" />
+        </div>
+        <div class="text-danger" *ngIf="loginFailed">Incorrect Username and/or Password</div>
+        <div class="form-group">
+          <label for="password" style="font-family:Nunito" class="form-field-labels">Password</label>
+          <input type="password" formControlName="password" class="form-control" />
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="form-group">
+            <button class="btn btn-medium btn-blue btn-radius" style="font-family:Nunito" id="btn-login" [disabled]="form.invalid">Login</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </span>
