--- a/Angular Project/src/app/login/login.component.css
+++ b/Angular Project/src/app/login/login.component.css
@@ -1,27 +1,24 @@
-.p-3 {
-  padding: spacer !important;
-}
-
 .background{
-
-  background-image: url("./../../assets/new_room.png");
-  height: 100%;
-  background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+  background-size: 50% 100%;
+  height: 800px;
+  background-image: url("./../../assets/interview.jpg");
+}
+
+.container{
+  
+  position: absolute; 
+  top:300px;
+  right: 0px;
 
 }
 
-.User_interaction{
-  color:White;
-  text-align:center;
+h2 {
   position: absolute;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
+  top: 100px;
+  right: 125px;
+  width: 500px;
 }
 
-.make-smaller {
-  width: 1em;
-}
+
+
