--- a/Angular Project/src/app/login/login.component.html
+++ b/Angular Project/src/app/login/login.component.html
@@ -1,50 +1,18 @@
-<!-- <div class="login">
-  <form>
-    <div class="input-group p-3">
-      <input type="text" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" class="form-control make-smaller"
-        placeholder="Email" aria-label="Email">
-    </div>
-    <div class="input-group p-3">
-      <input type="text" [(ngModel)]="pass" [ngModelOptions]="{standalone: true}" class="form-control make-smaller"
-        placeholder="Password" aria-label="Password">
-    </div>
-  </form>
-</div>
-<div class="modal-footer">
-  <button type="button" (click)="login()" class="btn btn-primary">Login</button>
-</div> -->
-
-
-<div class="container">
-    <h1>Login</h1>
-    <div class="row">
+<div class="background">
+<h2 >Welcome to Anchor Management</h2>
+  <div class="container col-md-6">
+      <div id="username" class="form-group">
+        <label for="account_name">Email</label>
+        <input type="text" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" class="form-control form-control-lg" placeholder="Email" aria-label="Email">
+      </div>
+      <div id="password" class="form-group">
+        <label for="account_password">Password</label>
+        <input type="text" [(ngModel)]="pass" [ngModelOptions]="{standalone: true}" class="form-control form-control-lg" placeholder="Password" aria-label="Password">
+      </div>
       <div class="col-md-8">
-        <div class="card">
-          <div class="card-header">
-            Account Information
-          </div>
-          <div class="card-body">
-            <div class="form-group">
-              <label for="account_name">
-                Email
-              </label>
-              <input type="text" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" class="form-control"
-        placeholder="Email" aria-label="Email">
-            </div>
-            <div class="form-group">
-              <label for="account_password">
-                Password
-              </label>
-              <input type="text" [(ngModel)]="pass" [ngModelOptions]="{standalone: true}" class="form-control"
-        placeholder="Password" aria-label="Password">
-            </div>
-          </div>
-        </div>
-        <br />
-        <button class="btn btn-lg btn-success btn-block" type="button" (click)="login()">
-          Login
-        </button>
+        <button class="btn btn-success btn-block " type="button" (click)="login()">Login</button>
       </div>
     </div>
-  </div>
+</div>
+
 
