--- a/Angular Project/src/app/story/story.component.css
+++ b/Angular Project/src/app/story/story.component.css
@@ -1,44 +1,47 @@
-body {
-    background: #ccc;   
-   }
-   .flip {
-     -webkit-perspective: 800;
-      width: 400px;
-      height: 200px;
-       position: relative;
-       margin: 50px auto;
-   }
-   .flip .card.flipped {
-     -webkit-transform: rotatex(-180deg);
-   }
-   .flip .card {
-     width: 100%;
-     height: 100%;
-     -webkit-transform-style: preserve-3d;
-     -webkit-transition: 0.5s;
-   }
-   .flip .card .face {
-     width: 100%;
-     height: 100%;
-     position: absolute;
-     -webkit-backface-visibility: hidden ;
-     z-index: 2;
-       font-family: Georgia;
-       font-size: 3em;
-       text-align: center;
-       line-height: 200px;
-   }
-   .flip .card .front {
-     position: absolute;
-     z-index: 1;
-       background: black;
-       color: white;
-       cursor: pointer;
-   }
-   .flip .card .back {
-     -webkit-transform: rotatex(-180deg);
-       background: blue;
-       background: white;
-       color: black;
-       cursor: pointer;
-   }
+.maincard{  
+    position:relative;
+    width:900px;
+    height:900px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transform-style:preserve-3d;
+    -webkit-transition: transform 1.5s; /* Safari and Chrome */
+    transition: transform 1.5s;
+  }
+  .front{
+    position: absolute;
+    height:100%;
+    width:100%;
+    background-color: #CC3333;
+    backface-visibility: hidden;
+    color: #fff;
+    text-align: center;
+    line-height: 208px;
+    font-family: Helvetica;
+  }
+  .back{
+    position: absolute;
+    height:100%;
+    width:100%;
+    background-color: #999999;
+    backface-visibility: hidden;
+    
+    color: #fff;
+    text-align: center;
+    line-height: 208px;
+    font-family: Helvetica;
+    
+    /* rotating the back face of the card */
+    -ms-transform: rotateY(-180deg); /* IE 9 */
+    -webkit-transform: rotateY(-180deg); /* Safari */
+    transform: rotateY(-180deg);
+  }
+
+  .card-wrapper {
+    perspective:800px;
+  }
+
+  .maincard:hover {
+    -ms-transform: rotateY(-180deg); /* IE 9 */
+    -webkit-transform: rotateY(-180deg); /* Safari Chrome */
+    transform: rotateY(-180deg);
+  }
