--- a/Angular Project/src/app/story/story.component.html
+++ b/Angular Project/src/app/story/story.component.html
@@ -1,7 +1,8 @@
  <div class="container-fluid m-2" *ngIf="vehicles && experts && equipment">
-  <div ng-app="flip" ng-controller="flipCtrl">
-    <div class="flip">
-      <div class="card" ng-class="{'flipped':isFlipped}" (click)="onClick()">
+ <div class="row">
+ <div class="container">
+  <div class="card-wrapper">
+      <div class="maincard">
         <div class="face front">
             <img src="./assets/blue_card.jpeg">
             <div class="card-body">
@@ -9,20 +10,14 @@
               
             </div>
         </div>
-        <div class="face back">
+        <div class="back">
                 <div class="card-header clearfix">
                   <h5 class="card-title mt-2"> {{story.storyTopic}} </h5>
                 </div>
                 <div class="card-body">
-                  <div class="row">
-                    <p class="card-text p-3"> {{story.storyDate}}</p>
-                  </div>
-                <div class="row">
-                  <p class="card-text p-3"> {{story.startTime}} - {{story.endTime}}</p>
-                </div>
-                <div class="row">
-                  <p class="card-text p-3"> {{story.description}}</p>
-                </div>
+                    <p class="card-text float-left"> {{story.storyDate}}</p>
+                    <p class="card-text float-left"> {{story.startTime}} - {{story.endTime}}</p>
+                    <p class="card-text float-left"> {{story.description}}</p>
                 <div class="row">
                   <div class="col-md-4">
                     <div class="card mt-4" style="width: 18rem;">
@@ -79,6 +74,7 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
+   </div>
+   </div>
+   </div>
 </div>
