--- a/Angular Project/src/app/account-creation/account-creation.component.html
+++ b/Angular Project/src/app/account-creation/account-creation.component.html
@@ -1,4 +1,5 @@
-<div class="container" *ngIf="account">
+<div class="background">
+  <div class="container" *ngIf="account">
   <h1>Account Creation</h1>
   <div class="row">
     <div class="col-md-8">
@@ -53,8 +54,8 @@
         Create Account
       </button>
     </div>
-    <!-- <div class="col-md-4">
-      <pre>{{account|json}}</pre>
-    </div> -->
   </div>
+  
+</div>
+
 
