Account Creation has position issues

--- a/Angular Project/src/app/account-creation/account-creation.component.html
+++ b/Angular Project/src/app/account-creation/account-creation.component.html
@@ -1,6 +1,7 @@
 <div class="background">
+  <img src="./../../assets/room2.jpg">
   <div class="container" *ngIf="account">
-  <h1>Account Creation</h1>
+  <h1 class="text-center">Account Creation</h1>
   <div class="row">
     <div class="col-md-8">
       <div class="card">
