--- a/Angular Project/src/app/account-creation/account-creation.component.css
+++ b/Angular Project/src/app/account-creation/account-creation.component.css
@@ -1,11 +1,11 @@
 .background{
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("./../../assets/room2.jpg");
+    background-repeat: no-repeat; 
+  }
+
+  img{
     opacity: 0.7;
     height: 800px;
-    
+    width: 2000px;
   }
 
   .container{
