--- a/Angular Project/src/app/navbar/navbar.component.html
+++ b/Angular Project/src/app/navbar/navbar.component.html
@@ -6,8 +6,9 @@
 
     <div class="collapse navbar-collapse" id="navbarToggle">
       <ul>
-          <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" (click)="logout()">Logout</a>
-          <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" >Profile</a>
+        <li><a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" >Profile</a></li>
+        <li><a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" (click)="logout()">Logout</a></li>
+
       </ul>
     </div>
 
