changed the out look of cards on homepage

--- a/Angular Project/src/app/navbar/navbar.component.html
+++ b/Angular Project/src/app/navbar/navbar.component.html
@@ -5,11 +5,8 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarToggle">
-      <ul>
-        <li><a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" >Profile</a></li>
-        <li><a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" (click)="logout()">Logout</a></li>
-
-      </ul>
+        <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" >Profile</a>
+        <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" (click)="logout()">Logout</a>
     </div>
 
 
