--- a/Angular Project/src/app/story/story.component.html
+++ b/Angular Project/src/app/story/story.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid m-2" *ngIf="vehicles && experts && equipment">
-  <div class="card">
+  <div class="card bg-dark text-white">
     <div class="card-header clearfix">
       <h5 class="card-title mt-2"> {{story.storyTopic}} </h5>
     </div>
@@ -20,8 +20,8 @@
       </ul>
       <div class="row">
         <div class="col-md-4">
-          <div class="card mt-4" style="width: 18rem;">
-            <div class="card-header">
+          <div class="card bg-dark text-dark mt-4" style="width: 18rem;">
+            <div class="card-header text-white">
               Vehicles
               <button type="button" class="btn btn-primary float-right" [routerLink]="['/manageVehicles', story.storyID]">Edit</button>
             </div>
@@ -36,8 +36,8 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card mt-4" style="width: 18rem;">
-            <div class="card-header">
+          <div class="card bg-dark text-dark mt-4" style="width: 18rem;">
+            <div class="card-header text-white">
               Experts
               <button type="button" class="btn btn-primary float-right" [routerLink]="['/manageExperts', story.storyID]">Edit</button>
             </div>
@@ -54,8 +54,8 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card mt-4" style="width: 18rem;">
-            <div class="card-header">
+          <div class="card bg-dark text-dark mt-4" style="width: 18rem;">
+            <div class="card-header text-white">
               Equipment
               <button type="button" class="btn btn-primary float-right" [routerLink]="['/manageEquipment', story.storyID]">Edit</button>
             </div>
