--- a/Angular Project/src/app/homepage/homepage.component.css
+++ b/Angular Project/src/app/homepage/homepage.component.css
@@ -1,3 +1,8 @@
+.background{
+  box-sizing: border-box;
+    background-color: #52658F !important;
+    height: 1000px;
+}
 
    h4, th, td, h1 {
       color: #FFFFFF;
