changed the out look of cards on homepage

--- a/Angular Project/src/app/homepage/homepage.component.css
+++ b/Angular Project/src/app/homepage/homepage.component.css
@@ -1,7 +1,7 @@
 .background{
   box-sizing: border-box;
     background-color: #52658F !important;
-    height: 1000px;
+    height: 100%;
 }
 
    h4, th, td, h1 {
