--- a/Angular Project/src/app/login/login.component.html
+++ b/Angular Project/src/app/login/login.component.html
@@ -1,17 +1,17 @@
 <div class="background">
 <h2 >Welcome to Anchor Management</h2>
-  <div class="container col-md-6">
+  <div class="container">
       <span>
             <div id="login-forms" class="d-flex justify-content-center">
               <form [formGroup]="form" (ngSubmit)="login()">
                 <div class="form-group">
                   <label for="email" class="form-field-labels">Email</label>
-                  <input type="text" formControlName="email" class="form-control" [(ngModel)]="email" />
+                  <input type="text" formControlName="email" class="form-control form-control-lg" [(ngModel)]="email" />
                 </div>
                 <div class="text-danger" *ngIf="loginFailed">Incorrect Username and/or Password</div>
                 <div class="form-group">
                   <label for="password" class="form-field-labels">Password</label>
-                  <input type="password" formControlName="password" class="form-control" [(ngModel)]="pass" />
+                  <input type="password" formControlName="password" class="form-control form-control-lg col-lg-20" [(ngModel)]="pass" />
                 </div>
                 <div class="d-flex justify-content-center">
                   <div class="form-group">
