--- a/Angular Project/src/app/homepage/homepage.component.css
+++ b/Angular Project/src/app/homepage/homepage.component.css
@@ -1,14 +1,10 @@
 .background{
   box-sizing: border-box;
-    background-color: #52658F !important;
-    height: 100%;
+    background-color: #52658F;
+    background-size: 100% 100%;
+    height: auto;
+    width: auto;
 }
-
-   h4, th, td, h1 {
-      color: #FFFFFF;
-      position: relative;
-      z-index: 10;
-  }
 
   h2{
     padding-top: 30px;
@@ -16,7 +12,7 @@
   }
 
   h1{
-    color: black;
+    color: whitesmoke;
   }
 
 #username{
