making finishing touches

--- a/Angular Project/src/app/homepage/homepage.component.css
+++ b/Angular Project/src/app/homepage/homepage.component.css
@@ -12,7 +12,8 @@
   }
 
   h1{
-    color: whitesmoke;
+    color: darkgray;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 
 #username{
