--- a/Angular Project/src/app/story/story.component.html
+++ b/Angular Project/src/app/story/story.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid m-2" *ngIf="vehicles && experts && equipment">
-  <div class="card bg-dark text-white">
-    <div class="card-header clearfix">
+  <div class="card">
+    <div class="card-header bg-dark text-white clearfix">
       <h5 class="card-title mt-2"> {{story.storyTopic}} </h5>
     </div>
-    <div class="card-body">
+    <div class="card-body text-dark bg-light">
       <label class=""> Details</label>
       <ul>
         <li>
