--- a/Angular Project/src/app/an-story/an-story.component.html
+++ b/Angular Project/src/app/an-story/an-story.component.html
@@ -10,7 +10,7 @@
         <div *ngSwitchCase=0>
           No stories claimed.
         </div>
-        <table *ngSwitchDefault class="table table-striped table-condensed">
+        <table *ngSwitchDefault class="table">
           <thead>
             <tr>
               <th class="w-50">
