--- a/Angular Project/src/app/homepage/homepage.component.html
+++ b/Angular Project/src/app/homepage/homepage.component.html
@@ -1,6 +1,6 @@
 <div class="background" *ngIf="user">
   <app-navbar></app-navbar>
-  <h1 class="text-dark"> WELCOME,</h1>
+  <h1 > WELCOME,</h1>
    <p id="username" class="lead font-italic text-white">{{this.user.userName}}</p>
   <div class=container *ngIf="user.typeFlag == 0">
     <app-manager [manager]="user"></app-manager>
