--- a/Angular Project/src/app/matable/matable.component.html
+++ b/Angular Project/src/app/matable/matable.component.html
@@ -1,6 +1,8 @@
+<app-navbar></app-navbar>
+<div class="background">
 <div *ngIf="manager">
-  <div class="container col-xs-6">
-    <app-navbar></app-navbar>
+<div class="p-5">
+  <div class="container col-xs-6 text-white p-6">
     <h2 class="sub-header">My Anchors</h2>
     <div [ngSwitch]="myAnchors?.length">
       <div *ngSwitchCase=0>
@@ -31,13 +33,14 @@
       </table>
     </div>
   </div>
-  <div class="container col-xs-6">
+  <div class="p-5">
+  <div class="container col-xs-6 text-white">
     <h2 class="sub-header">Available Anchors</h2>
     <div [ngSwitch]="availableAnchors?.length">
       <div *ngSwitchCase=0>
         No Accounts Found.
       </div>
-      <table *ngSwitchDefault class="table table-striped table-condensed">
+      <table *ngSwitchDefault class="table">
         <thead>
           <tr>
             <th class="w-50">
@@ -62,6 +65,12 @@
       </table>
     </div>
   </div>
-  <button class="btn btn-primary font-weight-bold text-white float-right w-25" [routerLink]="['/home', manager.userID]">Return
-    to Dashboard</button>
+  <hr/>
+  <div class="p-4">
+    <button class="btn btn-primary font-weight-bold text-white float-right w-25" [routerLink]="['/home', manager.userID]">Return
+      to Dashboard</button>
+  </div>
+</div>
+</div>
+</div>
 </div>
