making finishing touches

--- a/Angular Project/src/app/manager/manager.component.html
+++ b/Angular Project/src/app/manager/manager.component.html
@@ -1,3 +1,4 @@
+<button class="btn btn-primary" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
 <div *ngIf="manager">
   <div id="accordion">
     <div class="card" *ngFor="let anchor of myAnchors; let i = index;">
@@ -18,4 +19,9 @@
       </div>
     </div>
 
-<button class="btn btn-primary" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
+<div class="container text-white" style="height:800px;">
+  <div [ngSwitch]="myAnchors?.length">
+    <hr/>
+    <div *ngSwitchCase=0><h2 class="lead" >No Anchors claimed.</h2></div>
+  </div>
+</div>
