--- a/Angular Project/src/app/manager/manager.component.html
+++ b/Angular Project/src/app/manager/manager.component.html
@@ -1,4 +1,5 @@
-<button class="btn btn-primary" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
+<button class="btn btn-primary float-right" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
+<div class="p-5">
 <div *ngIf="manager">
   <div id="accordion">
     <div class="card" *ngFor="let anchor of myAnchors; let i = index;">
@@ -24,4 +25,5 @@
     <hr/>
     <div *ngSwitchCase=0><h2 class="lead" >No Anchors claimed.</h2></div>
   </div>
+</div>
 </div>
