--- a/Angular Project/src/app/navbar/navbar.component.html
+++ b/Angular Project/src/app/navbar/navbar.component.html
@@ -5,12 +5,12 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarToggle">
-        <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" >Profile</a>
-        <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" >Calendar</a>
+        <a class="nav-link" aria-haspopup="true" aria-expanded="false" (click)="navToProfile()">Profile</a>
+        <a class="nav-link" aria-haspopup="true" aria-expanded="false" (click)="navToCal()">Calendar</a>
         <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" (click)="logout()">Logout</a>
     </div>
 
 
 
-    
+
   </nav>
