Fixed more shit

--- a/Angular Project/src/app/calendar/calendar.component.html
+++ b/Angular Project/src/app/calendar/calendar.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <h1 class="text-center" *ngIf="!equipLoaded && !vehicleLoaded">Please select a reservation.</h1>
 
 <div class="row justify-content-center btn-toolbar">
