--- a/Angular Project/src/app/navbar/navbar.component.html
+++ b/Angular Project/src/app/navbar/navbar.component.html
@@ -4,10 +4,21 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarToggle">
-        <a class="nav-link" aria-haspopup="true" aria-expanded="false" (click)="navToProfile()">Profile</a>
+    <div class="collapse navbar-collapse float-right" id="navbarToggle">
+      <div class="float-right">
+        <div class="row">
+          <a class="nav-link" aria-haspopup="true" aria-expanded="false" (click)="navToProfile()">Profile</a>
+        </div>
+        <div class="row">
         <a class="nav-link" aria-haspopup="true" aria-expanded="false" (click)="navToCal()">Calendar</a>
+        </div>
+        <div class="row">
+        <a class="nav-link"  aria-haspopup="true" aria-expanded="false" (click)="navToHome()">Homepage</a>
+        </div>
+        <div class="row">
         <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" (click)="logout()">Logout</a>
+        </div>
+      </div>
     </div>
 
 
