--- a/Angular Project/src/app/anchor/anchor.component.html
+++ b/Angular Project/src/app/anchor/anchor.component.html
@@ -3,8 +3,9 @@
 
 <button [routerLink]="['/manageStories', anchor.userID]" id="man-btn" class="btn btn-primary">Manage Stories</button>
 
-<div *ngFor="let story of myStories">
+<div *ngFor="let story of myStories; let i = index">
   <app-story [anchor]='anchor' [story]="story"></app-story>
+  <button class="btn btn-danger" (click)="markDone(i)">WE B-O-O-L-I-N</button>
 </div>
 
 <div class="container text-white" style="height:800px;">
