--- a/Angular Project/src/app/manager/manager.component.html
+++ b/Angular Project/src/app/manager/manager.component.html
@@ -1,35 +1,86 @@
 <div class="row">
- <button class="btn btn-primary float-right" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
- <button class="btn btn-primary float-right" >Add Vehicles</button>
- <button class="btn btn-primary float-right" >Add Equipment</button>
- <button class="btn btn-primary float-right" >Add Expert</button>
+  <button class="btn btn-primary float-right" [routerLink]="['/manageAnchors', manager.userID]">Manage Anchors</button>
+  <button class="btn btn-primary float-right" data-toggle="modal" data-target="#vehicleModal">Add Vehicles</button>
+  <button class="btn btn-primary float-right" data-toggle="modal" data-target="#equipModal">Add Equipment</button>
+  <button class="btn btn-primary float-right" data-toggle="modal" data-target="#expertModal">Add Expert</button>
 </div>
 
 <div class="p-5">
-<div *ngIf="manager">
-  <div id="accordion">
-    <div class="card" *ngFor="let anchor of myAnchors; let i = index;">
-      <div class="card-header" id="headingOne">
-        <h5 class="mb-0">
-          <!-- try to use index for index based attributes like data-target  -->
-          <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
-            aria-controls="collapseOne">
-            {{anchor.userName}}
-          </button>
-        </h5>
+  <div *ngIf="manager">
+    <div id="accordion">
+      <div class="card" *ngFor="let anchor of myAnchors; let i = index;">
+        <div class="card-header" id="headingOne">
+          <h5 class="mb-0">
+            <!-- try to use index for index based attributes like data-target  -->
+            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+              aria-controls="collapseOne">
+              {{anchor.userName}}
+            </button>
+          </h5>
+        </div>
+
+        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+          <div class="card-body">
+            <app-anchor [anchor]="this.anchor"></app-anchor>
+          </div>
+        </div>
       </div>
 
-      <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-        <div class="card-body">
-          <app-anchor [anchor]="this.anchor"></app-anchor>
+      <div class="container text-white" style="height:800px;">
+        <div [ngSwitch]="myAnchors?.length">
+          <hr />
+          <div *ngSwitchCase=0>
+            <h2 class="lead">No Anchors claimed.</h2>
+          </div>
         </div>
       </div>
     </div>
 
-<div class="container text-white" style="height:800px;">
-  <div [ngSwitch]="myAnchors?.length">
-    <hr/>
-    <div *ngSwitchCase=0><h2 class="lead" >No Anchors claimed.</h2></div>
+    <div class="modal fade" id="vehicleModal" tabindex="-1" role="dialog" aria-labelledby="vehicleModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="vehicleModalLabel">Add a Vehicle</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+
+
+            <div class="form-group">
+              <label for="vehicleName" class="form-field-labels">Vehicle Name: </label>
+              <input type="text" formControlName="vehicleName" class="form-control" [(ngModel)]="vehicle.vehicleName" />
+            </div>
+
+
+            <div class="form-group">
+              <label for="vehicleType" class="form-field-labels">Vehicle Type: </label>
+              <input type="text" formControlName="vehicleType" class="form-control" [(ngModel)]="vehicle.vehicleType" />
+            </div>
+
+
+            <div class="form-group">
+              <label for="vehicleColor" class="form-field-labels">Vehicle Color: </label>
+              <input type="text" formControlName="vehicleColor" class="form-control" [(ngModel)]="vehicle.vehicleColor" />
+            </div>
+
+
+            <div class="form-group">
+              <label for="vehicleModel" class="form-field-labels">Vehicle Model: </label>
+              <input type="text" formControlName="vehicleModel" class="form-control" [(ngModel)]="vehicle.vehicleModel" />
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clearVehicle()">Close</button>
+            <button type="button" class="btn btn-primary" (click)="addVehicle()">Add</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
   </div>
 </div>
-
