--- a/Angular Project/src/app/anchor/anchor.component.html
+++ b/Angular Project/src/app/anchor/anchor.component.html
@@ -5,7 +5,7 @@
 
 <div *ngFor="let story of myStories; let i = index">
   <app-story [anchor]='anchor' [story]="story"></app-story>
-  <button class="btn btn-danger" (click)="markDone(i)">WE B-O-O-L-I-N</button>
+  <button class="btn btn-secondary ml-4 w-75 float-center text-center" (click)="markDone(i)">Mark Story As Done</button>
 </div>
 
 <div class="container text-white" style="height:800px;">
