--- a/Angular Project/src/app/login/login.component.html
+++ b/Angular Project/src/app/login/login.component.html
@@ -11,7 +11,7 @@
                 <div class="text-danger" *ngIf="loginFailed">Incorrect Username and/or Password</div>
                 <div class="form-group">
                   <label for="password" class="form-field-labels">Password</label>
-                  <input type="password" formControlName="password" class="form-control form-control-lg col-lg-20" [(ngModel)]="pass" />
+                  <input type="password" (keydown.enter)="login()" formControlName="password" class="form-control form-control-lg col-lg-20" [(ngModel)]="pass" />
                 </div>
                 <div class="d-flex justify-content-center">
                   <div class="form-group">
