--- a/Angular Project/src/app/profile/profile.component.css
+++ b/Angular Project/src/app/profile/profile.component.css
@@ -15,21 +15,25 @@ body{
             backface-visibility: hidden;
         }
 
-        .middle {
-            transition: .5s ease;
-            opacity: 0;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%, -50%);
-            text-align: center;
-        }
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
 
-        .image-container:hover .image {
-            opacity: 0.3;
-        }
+.image-container:hover .image {
+    opacity: 0.3;
+}
 
-        .image-container:hover .middle {
-            opacity: 1;
-        }
+.image-container:hover .middle {
+    opacity: 1;
+}
+
+.background{
+    height:100vh;
+}
