--- a/Angular Project/src/app/profile/profile.component.html
+++ b/Angular Project/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
-<div class="background bg-dark">
+<div class="background">
 <div class="container" *ngIf="account">
-        <div class="row">
+        <div class="row p-3">
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
@@ -15,7 +15,7 @@
                                     </div>
                                 </div>
                                 <div class="userData ml-3">
-                                    <h2 class="d-block" style="font-weight: bold; top: 50px;">{{ account.userName }}</h2>
+                                    <h2 class="user" style="font-weight: bold;">{{ account.userName }}</h2>
                                 </div>
                                 <div class="ml-auto">
                                     <input type="button" class="btn btn-primary d-none" id="btnDiscard" value="Discard Changes" />
