--- a/Angular Project/src/app/navbar/navbar.component.html
+++ b/Angular Project/src/app/navbar/navbar.component.html
@@ -5,8 +5,16 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarToggle">
+    <div class="float-right">
+      <div class="row">
         <a class="nav-link" href="javascript:void(0);" aria-haspopup="true" aria-expanded="false" (click)="navToProfile()">Profile</a>
+      </div>
+      <div class="row">
         <a class="nav-link" href="javascript:void(0);" aria-haspopup="true" aria-expanded="false" (click)="navToCal()">Calendar</a>
+      </div>
+      <div class="row">
         <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false" (click)="logout()">Logout</a>
-        </div>
+      </div>
+    </div>
+    </div>
   </nav>
