--- a/Angular Project/src/app/navbar/navbar.component.html
+++ b/Angular Project/src/app/navbar/navbar.component.html
@@ -6,6 +6,9 @@
 
     <div class="collapse navbar-collapse" id="navbarToggle">
     <div class="float-right">
+    <div class="row">
+        <a class="nav-link" href="javascript:void(0);" aria-haspopup="true" aria-expanded="false" (click)="navToHome()">Homepage</a>
+      </div>
       <div class="row">
         <a class="nav-link" href="javascript:void(0);" aria-haspopup="true" aria-expanded="false" (click)="navToProfile()">Profile</a>
       </div>
