added styling to calendars. also some other things. most of this will probably be thrown away.

--- a/Angular Project/src/app/vehicle-calendar/vehicle-calendar.component.html
+++ b/Angular Project/src/app/vehicle-calendar/vehicle-calendar.component.html
@@ -1,3 +1,4 @@
 <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.7.1/fullcalendar.min.css'>
-
-<div id='calendar' class="container justify-content-center"></div>
+<div class="w-100 h-100 color-grey">
+  <div id='calendar' class="container justify-content-center color-grey"></div>
+</div>
