--- a/Angular Project/src/app/anchor/anchor.component.html
+++ b/Angular Project/src/app/anchor/anchor.component.html
@@ -6,7 +6,7 @@
 <div *ngFor="let story of myStories; let i = index">
   <br/>
   <app-story [anchor]='anchor' [story]="story"></app-story>
-  <button class="btn btn-secondary ml-4 w-75 float-center text-center" (click)="markDone(i)">Mark Story As Done</button>
+  <button id="done" class="btn btn-secondary ml-4 w-75 float-center text-center" (click)="markDone(i)">Mark Story As Done</button>
 </div>
 
 
